# google-test-example

./: .gitignore  CMakeLists.txt  main.cpp
src/: add.cpp  add.h
test/: test_example.cpp
